--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,58 @@
+* {
+    margin: 0;
+    padding: 0;  
+    font-family: 'Quicksand', sans-serif;
+}
+
+
 body {
-    background-color: aqua;
+    background-color: #a8a8a8d2;
+}
+
+.start-btn,
+.info-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+.start-btn button {
+    font-weight: 500;
+    padding: 15px 30px;
+    outline: none;  
+    border: none;   
+    border-radius: 5px;
+    background: ;
+    cursor: pointer;
+    color: #151b1b;
+
+}
+
+.start-btn button:hover {
+    background-color: #B1A6A4;
+    
+}
+
+.info-box {
+    background-color: burlywood;
+    padding: 25px;
+    border-radius: 10px;
+}
+
+.info-box .info-title {
+    width: 100%;
+    height: 60px;
+    text-align: center;
+}
+
+.info-list {
+    padding-top: 5%;
+    padding-bottom: 5%;
+
+}
+
+.info-list li {
+    
 }
