--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,18 +41,33 @@ body {
     border-radius: 10px;
 }
 
-.info-box .info-title {
-    width: 100%;
-    height: 60px;
-    text-align: center;
+.info-title {
+      text-align: center;
+      font-size: 40px;
 }
 
 .info-list {
-    padding-top: 5%;
-    padding-bottom: 5%;
-
+    padding: 5%;
 }
 
 .info-list li {
-    
+    margin: 5px 0;
+    font-size: 20px;
+}
+
+.info-box .restart {
+    font-weight: 500;
+    padding: 15px 30px;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    color: #151b1b;
+    display: flex;
+    justify-content: center;
+
+}
+
+.info-box .restart:hover {
+    background-color: #B1A6A4;
 }
