--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,10 +40,11 @@ body {
 }
 
 .info-box {
-    display: none;
     background-color: #121B1B;
     padding: 25px;
     border-radius: 10px;
+    opacity: 0;
+    pointer-events: none;
 }
 
 .info-title {
@@ -78,10 +79,10 @@ body {
 }
 
 .quiz-box {
-    display: none;
     width: 550px;
     background: #CAA25B;
     border-radius: 5px;
+   
 }
 
 .quiz-box header{
@@ -166,6 +167,8 @@ body {
     justify-content: space-between;
     flex-direction: column;
     text-align: center;
+    opacity: 0;
+    pointer-events: none;
 }
 
 .end-text {
